fix z-index for network

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.network {
+  z-index: 999999;
+}
 .cursor-pointer{
   cursor: pointer;
 }
